# ToothPasteDesktop

./: .gitignore  .gitmodules  Cargo.toml  README.MD
crates/toothpaste-desktop-core/: Cargo.toml  README.MD
crates/toothpaste-desktop-core/src/: lib.rs
crates/toothpaste-desktop-proto/: Cargo.toml  build.rs
crates/toothpaste-desktop-proto/src/: lib.rs  packets.rs
crates/toothpaste-desktop-service/: Cargo.toml  README.MD
crates/toothpaste-desktop-service/src/: crypto.rs  lib.rs  main.rs
crates/toothpaste-desktop-service/src/modules/: crypto.rs  mod.rs  storage.rs
crates/toothpaste-desktop-service/src/modules/ble/: interface.rs  mod.rs
crates/toothpaste-desktop-service/src/modules/input/: handler.rs  hidmap.rs  mod.rs
crates/toothpaste-desktop-service/src/modules/mcp/: mod.rs
crates/toothpaste-desktop-tui/: Cargo.toml
crates/toothpaste-desktop-tui/src/: main.rs
crates/toothpaste-desktop-tui/src/tui/: mod.rs  ui.rs
crates/toothpaste-desktop-tui/src/tui/screens/: connected.rs  device_list.rs  home.rs  mod.rs  pairing_input.rs  scanning.rs
src/: main.rs  tui.rs
src/tui/: mod.rs  ui.rs
tests/: tui_tests.rs
