[package]
name = "toothpaste-desktop-service"
version = "0.1.0"
edition = "2024"

[dependencies]
toothpaste-desktop-proto = { path = "../toothpaste-desktop-proto" }
toothpaste-desktop-core = { path = "../toothpaste-desktop-core" }
prost = "0.14"
btleplug = { version = "0.12", features = ["serde"] }
futures = "0.3"
tokio = { version = "1.52.1", features = ["rt-multi-thread", "macros", "io-util", "io-std", "sync"] }
interprocess = { version = "2", features = ["tokio"] }
notify-rust = "4"
uuid = { version = "1", features = ["v4"] }

# Cryptography dependencies
p256 = { version = "0.13", features = ["ecdh"] }
aes-gcm = "0.10"
hkdf = "0.12"
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
zeroize = "1.7"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rdev = {version = "0.5.3", features = ["unstable_grab"]}
arboard = "3.6.1"
